--- a/championship/src/main/resources/br/edu/ifsp/ChampionshipUI.fxml
+++ b/championship/src/main/resources/br/edu/ifsp/ChampionshipUI.fxml
@@ -5,15 +5,15 @@
 
 <AnchorPane prefHeight="568.0" prefWidth="662.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.ifsp.application.main.controller.ChampionshipUIController">
    <children>
-      <Label layoutX="8.0" layoutY="46.0" text="Modalidade do Campeonato" />
+      <Label layoutX="9.0" layoutY="59.0" text="Modalidade do Campeonato" />
       <Label layoutX="10.0" layoutY="108.0" text="Nome do Campeonato" />
-      <TextField fx:id="txtNomeCampeonato" layoutX="154.0" layoutY="105.0" prefHeight="25.0" prefWidth="468.0" />
+      <TextField fx:id="txtNomeCampeonato" layoutX="141.0" layoutY="104.0" prefHeight="25.0" prefWidth="507.0" />
       <Label layoutX="12.0" layoutY="155.0" text="Data de Inicio" />
-      <Label layoutX="333.0" layoutY="152.0" text="Data Final" />
+      <Label layoutX="395.0" layoutY="152.0" text="Data Final" />
       <Label layoutX="11.0" layoutY="199.0" text="Patrocinadores" />
       <TextField fx:id="txtPatrocinadores" layoutX="124.0" layoutY="195.0" prefHeight="25.0" prefWidth="528.0" />
       <Label layoutX="11.0" layoutY="244.0" text="Premiação" />
-      <TextField fx:id="txtPremiacao" layoutX="124.0" layoutY="240.0" />
+      <TextField fx:id="txtPremiacao" layoutX="124.0" layoutY="240.0" prefHeight="25.0" prefWidth="528.0" />
       <Label layoutX="11.0" layoutY="284.0" text="Times Participantes" />
       <TableView fx:id="tabelaTime" layoutX="122.0" layoutY="284.0" prefHeight="200.0" prefWidth="528.0">
         <columns>
@@ -23,8 +23,8 @@
       </TableView>
       <Button fx:id="btnCancelar" layoutX="500.0" layoutY="518.0" mnemonicParsing="false" onAction="#backToPreviousScene" text="Cancelar" />
       <Button fx:id="btnCriarCampeonato" layoutX="578.0" layoutY="518.0" mnemonicParsing="false" onAction="#createChampionship" prefHeight="25.0" prefWidth="62.0" text="Criar" />
-      <DatePicker fx:id="initialDate" layoutX="122.0" layoutY="152.0" />
-      <DatePicker fx:id="finalDate" layoutX="427.0" layoutY="148.0" />
-      <ChoiceBox fx:id="modalidadeCampeonato" layoutX="175.0" layoutY="44.0" prefWidth="150.0" />
+      <DatePicker fx:id="initialDate" layoutX="122.0" layoutY="152.0" prefHeight="25.0" prefWidth="180.0" />
+      <DatePicker fx:id="finalDate" layoutX="466.0" layoutY="148.0" />
+      <TextField fx:id="txtModalidade" layoutX="175.0" layoutY="55.0" prefHeight="25.0" prefWidth="473.0" />
    </children>
 </AnchorPane>
