--- a/championship/src/main/resources/br/edu/ifsp/FirstScene.fxml
+++ b/championship/src/main/resources/br/edu/ifsp/FirstScene.fxml
@@ -10,7 +10,7 @@
       <Button fx:id="btnCriarCampeonato" layoutY="-1.0" mnemonicParsing="false" onAction="#scenChampionshipUI" prefHeight="25.0" prefWidth="156.0" text="Criar Campeonato" />
       <Button fx:id="btnAcompanhar" layoutX="156.0" layoutY="-1.0" mnemonicParsing="false" onAction="#sceneAcompanhar" text="Acompanhar Campeonato" />
       <Button fx:id="btnSair" layoutX="546.0" layoutY="194.0" mnemonicParsing="false" onAction="#closeSoft" prefHeight="25.0" prefWidth="61.0" text="Sair" />
-      <Label layoutX="272.0" layoutY="82.0" text="Bem vindo ao" />
+      <Label layoutX="272.0" layoutY="82.0" text="Bem-vindo ao" />
       <Label layoutX="217.0" layoutY="120.0" text="Gerenciador de Campeonatos CAADES" />
    </children>
 </AnchorPane>
