--- a/championship/src/main/resources/br/edu/ifsp/pontosCorridosManage.fxml
+++ b/championship/src/main/resources/br/edu/ifsp/pontosCorridosManage.fxml
@@ -18,5 +18,6 @@
         <Button fx:id="btnAcompanharRodada" layoutX="17.0" layoutY="50.0" mnemonicParsing="false" onAction="#nextScene" prefHeight="43.0" prefWidth="148.0" text="Acompanhar Rodada" />
         <Button fx:id="btnVoltar" layoutX="18.0" layoutY="312.0" mnemonicParsing="false" onAction="#previousScene" prefHeight="43.0" prefWidth="148.0" text="Voltar" />
       <Button fx:id="btnExportClassificacao" layoutX="17.0" layoutY="112.0" mnemonicParsing="false" onAction="#ExportClassificacao" prefHeight="43.0" prefWidth="148.0" text="Exportar Classificação" />
+      <Button fx:id="btnFinilizarCampeonato" layoutX="18.0" layoutY="177.0" mnemonicParsing="false" onAction="#finishiChampionship" prefHeight="43.0" prefWidth="148.0" text="Finalizar Campeonato" />
     </children>
 </AnchorPane>
